<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/nome"
            android:id="@+id/idcadastroNome"
            android:imeOptions="actionNext"
            android:inputType="text"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:id="@+id/idcadastroEmail"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Senha"
            android:id="@+id/idcadastroSenha"
            android:inputType="textPassword"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/passageiro"
                android:textSize="20dp"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/switchTipoUsuario"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/Motorista"
                android:textSize="20dp"/>


        </LinearLayout>

         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@color/bt_cadastrar"
             android:hint="@string/cadastrar"
             android:onClick="ValidarCadastroUsuario"
             android:textColorHint="@color/white"
             android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>