<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="347dp"
        android:layout_gravity="center"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:hint="@string/Email"
            android:id="@+id/edit_loginEmail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:id="@+id/edit_loginSenha"
            android:hint="@string/Senha"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:onClick="validarLoginUsuario"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/Btentrar"
            android:textColor="@android:color/white" />
    </LinearLayout>



</LinearLayout>